--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-booster",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "node ./bin/index.js"
   },
   "bin": {
-    "rnboost": "./bin/index.js"
+    "rnbooster": "./bin/index.js"
   },
   "keywords": [],
   "author": "",
